--- a/packages/generator-react-native-vector-icons/src/app/templates/package.json
+++ b/packages/generator-react-native-vector-icons/src/app/templates/package.json
@@ -53,8 +53,9 @@
     "<%= packageName %>"
   ],
   "repository": {
+    "url": "https://github.com/oblador/react-native-vector-icons",
     "type": "git",
-    "url": "git://github.com/oblador/react-native-vector-icons.git"
+    "directory": "packages/<%= packageName %>"
   },
   "author": {
     "name": "Joel Arvidsson",
