--- a/packages/feather/package.json
+++ b/packages/feather/package.json
@@ -53,8 +53,9 @@
     "feather"
   ],
   "repository": {
+    "url": "https://github.com/oblador/react-native-vector-icons",
     "type": "git",
-    "url": "git://github.com/oblador/react-native-vector-icons.git"
+    "directory": "packages/feather"
   },
   "author": {
     "name": "Joel Arvidsson",
