fix: back out autogeneration of spec files as it breaks on RN0.73

--- a/packages/common/package.json
+++ b/packages/common/package.json
@@ -151,7 +151,7 @@
     "android": {
       "javaPackageName": "com.reactnativevectoricons.common"
     },
-    "includesGeneratedCode": true
+    "includesGeneratedCode": false
   },
   "create-react-native-library": {
     "type": "module-mixed",
