ci: debug build issue

--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -197,11 +197,13 @@ jobs:
           cd -
           # Due to react-native-test-app not bundling
           yarn build:ios:owl
+          rm -rf ios/generated
           if [ "${{ matrix.arch }}" = "new" ]; then
             NO_FLIPPER=1 RCT_NEW_ARCH_ENABLED=1 pod update --project-directory=ios
           else
             NO_FLIPPER=1 RCT_NEW_ARCH_ENABLED=0 pod update --project-directory=ios
           fi
+          rm -rf ios/generated
           yarn test:ios:build
 
       - name: Run simulator
