--- a/packages/generator-react-native-vector-icons/src/app/templates/package.json
+++ b/packages/generator-react-native-vector-icons/src/app/templates/package.json
@@ -5,6 +5,7 @@
   "source": "<%= source %>",
   "main": "./lib/commonjs/index.js",
   "module": "./lib/module/index.js",
+  "types": "./lib/typescript/commonjs/src/index.d.ts",
   "exports": {
     ".": {
       "import": {
