chore: upgrade to RN 0.76

--- a/packages/icon-explorer/package.json
+++ b/packages/icon-explorer/package.json
@@ -44,7 +44,7 @@
     "@react-native-vector-icons/simple-line-icons": "workspace:^",
     "@react-native-vector-icons/zocial": "workspace:^",
     "react": "18.3.1",
-    "react-native": "^0.75.4",
+    "react-native": "0.76.1",
     "react-native-animatable": "^1.4.0"
   },
   "devDependencies": {
@@ -54,10 +54,13 @@
     "@expo/config-plugins": "^8.0.10",
     "@jest/types": "^29.6.3",
     "@johnf/react-native-owl": "^1.4.4",
-    "@react-native/babel-preset": "^0.75.4",
-    "@react-native/eslint-config": "^0.75.4",
-    "@react-native/metro-config": "^0.75.4",
-    "@react-native/typescript-config": "^0.75.4",
+    "@react-native-community/cli": "15.1.2",
+    "@react-native-community/cli-platform-android": "15.1.2",
+    "@react-native-community/cli-platform-ios": "15.1.2",
+    "@react-native/babel-preset": "0.76.1",
+    "@react-native/eslint-config": "0.76.1",
+    "@react-native/metro-config": "0.76.1",
+    "@react-native/typescript-config": "0.76.1",
     "@rnx-kit/align-deps": "^3.0.2",
     "@rnx-kit/babel-preset-metro-react-native": "^2.0.0",
     "@rnx-kit/metro-config": "^2.0.1",
