--- a/packages/generator-react-native-vector-icons/package.json
+++ b/packages/generator-react-native-vector-icons/package.json
@@ -15,6 +15,8 @@
     "mem-fs": "^4.1.1",
     "npm-registry-fetch": "^18.0.2",
     "oslllo-svg-fixer": "^5.0.0",
+    "postcss": "^8.4.49",
+    "postcss-selector-parser": "^7.0.0",
     "registry-auth-token": "^5.0.2",
     "semver": "^7.6.3",
     "yeoman-generator": "^7.3.3"
